[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
#write_to = "pybrtree/version.py"

[project]
name = "pyrbtree"
version = "0.0.1"
authors = [
  { name="SBA", email="s-ball@laposte.net" },
]
description = "Red Black tree extension package"
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
]

[project.urls]
"Homepage" = "https://github.com/s-ball/pyrbtree"
"Bug Tracker" = "https://github.com/s-ball/pyrbtree/issues"

