[build-system]
requires = ["setuptools>=60.0", "wheel", "setuptools_scm[toml]>=4.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyrbtree/version.py"

[project]
name = "pyrbtree"
authors = [
  { name="SBA", email="s-ball@laposte.net" },
]
description = "Red Black tree extension package"
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/s-ball/pyrbtree"
"Bug Tracker" = "https://github.com/s-ball/pyrbtree/issues"

